--- a/web/src/pages/Landing/styles.css
+++ b/web/src/pages/Landing/styles.css
@@ -42,7 +42,7 @@ h1{
 }
 
 .buttons-container a {
-    width: 30rem;
+    min-width: 28rem;
     height: 10.4rem;
     border-radius: 0.8rem;
     font: 700 2.0rem Archivo;
@@ -94,6 +94,10 @@ h1{
     margin-left: 0.8rem;
 }
 
+.buttons-container a img {
+    margin-right: 2.4rem;
+}
+
 @media (min-width: 1100px) {
     #page-landing-content {
         max-width: 1100px;
@@ -137,9 +141,7 @@ h1{
         font-size: 2.4rem;
     }
     
-    .buttons-container a img {
-        margin-right: 2.4rem;
-    }
+    
     .total-connections {
         grid-area: total;
         justify-self: end;
