--- a/web/src/pages/Transporter/TransporterIndex/styles.css
+++ b/web/src/pages/Transporter/TransporterIndex/styles.css
@@ -1,30 +1,30 @@
-#page-teacher-list {
+#page-transporter-list {
     width: 100vw;
     height: 100vh;
 }
 
 
 
-#search-teachers {
+#search-transporters {
     margin-top: 3.2rem;
 }
 
-#search-teachers label {
+#search-transporters label {
     color: var(--color-text-in-primary);
 }
 
-#page-teacher-list main {
+#page-transporter-list main {
     margin: 3.2rem auto;
     width: 90%;
 }
 
 
 @media (min-width: 700px) {
-    #page-teacher-list {
+    #page-transporter-list {
         max-width: 100%;
     }
 
-    #search-teachers {
+    #search-transporters {
         display: grid;
         grid-template-columns: repeat(3,1fr);
         column-gap: 16px;
@@ -32,38 +32,38 @@
         bottom: -28px;
     }
 
-    #search-teachers .input-block + .input-block ,
-    #search-teachers .select-block + .select-block {
+    #search-transporters .input-block + .input-block ,
+    #search-transporters .select-block + .select-block {
         margin-top: 0;
     }
 
-    #page-teacher-list main {
+    #page-transporter-list main {
         padding: 3.2rem 0;
         max-width: 740px;
         margin: 0 auto;
     }
 
-    .teacher-item header,
-    .teacher-item footer {
+    .transporter-item header,
+    .transporter-item footer {
         padding: 3.2rem;
     }
 
-    .teacher-item > p {
+    .transporter-item > p {
         padding: 0 3.2rem;
     }
     
-    .teacher-item footer p strong {
+    .transporter-item footer p strong {
         display: initial;
         margin-left: 1.6rem;
     }
 
-    .teacher-item footer button {
+    .transporter-item footer button {
         width: 24.5rem;
         font-size: 1.6rem;
         justify-content: center;
     }
 
-    .teacher-item footer button img {
+    .transporter-item footer button img {
         margin-right: 1.6rem;
     }
     
