--- a/web/src/components/TransporterItem/styles.css
+++ b/web/src/components/TransporterItem/styles.css
@@ -1,4 +1,4 @@
-.teacher-item {
+.transporter-item {
     background: var(--color-box-base);
     border: 1px solid var(--color-line-in-white);
     border-radius: 0.8rem;
@@ -6,46 +6,77 @@
     overflow: hidden;
 }
 
-.teacher-item strong {
+.transporter-item strong {
     color: var(--color-primary);
     font-size: 1.6rem;
 }
 
-.teacher-item header {
-    padding: 3.2rem 2rem;
+.transporter-item header button {
+    text-decoration: none;
+    height: 5.6rem;
+    background: none;
+    border: none;
+    cursor: pointer;
     display: flex;
     align-items: center;
 }
 
-.teacher-item header img {
+.transporter-item header {
+    padding: 3.2rem 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.transporter-item header .first {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-left: 0 !important;
+    align-items: start;
+}
+
+.transporter-item header .first .second{
+    display: flex;
+    flex-direction: column;
+    margin-left: 2rem !important;
+    justify-content: start;
+    margin-top: 1.5rem;
+}
+
+.transporter-item header img.delete {
+    width: 3.5rem;
+}
+
+.transporter-item header .first img {
     width: 8rem;
     height: 8rem;
     border-radius: 20%;
 }
 
-.teacher-item header div {
+.transporter-item header .first {
     margin-left: 2.4rem;
 }
 
-.teacher-item header div strong {
+.transporter-item header .first strong {
    font: 700 2.4rem Archivo; 
    display: block;
    color: var(--color-text-title);
 }
 
-.teacher-item header div span {
+.transporter-item header .first span {
     font-size: 1.6rem;
     display: block;
     margin-top: 0.4rem;
 }
 
-.teacher-item > p {
+.transporter-item > p {
     padding: 0 2rem;
     font-size: 1.6rem;
     line-height: 2.8rem;
 }
 
-.teacher-item footer {
+.transporter-item footer {
     padding: 3.2rem 2rem;
     background: var(--color-box-footer);
     border-top: 1px solid var(--color-line-in-white);
@@ -55,13 +86,14 @@
     justify-content: space-between;
 }
 
-.teacher-item footer p strong {
+.transporter-item footer p strong {
     color: var(--color-primary);
     font-size: 1.6rem;
     display: block;
 }
 
-.teacher-item footer button {
+.transporter-item footer a {
+    text-decoration: none;
     width: 20rem;
     height: 5.6rem;
     background: var(--color-primary);
@@ -72,22 +104,23 @@
     font: 700 1.4rem Archivo;
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
-    transition: 0.2s;
+    justify-content: center;
+    transition: 0.2s;font-size: 1.9rem;
 }
 
-.teacher-item footer button:hover {
+.transporter-item footer a:hover {
     background: var(--color-primary-lighter);
 }
 
-.teacher-item footer button img{
+.transporter-item footer a img{
     width: 2rem;
     height: 2rem;
+    margin-right: 2rem;
 }
 
 .custom-ui {
-    min-width: 60rem;
-    min-height: 20rem;
+    width: 60rem;
+    height: 20rem;
     background: #9871F5;
     margin: 0 auto;
     display: flex;
