--- a/web/src/pages/Store/StoreCreate/styles.css
+++ b/web/src/pages/Store/StoreCreate/styles.css
@@ -1,13 +1,13 @@
-#page-teacher-form {
+#page-store-form {
     width: 100vw;
     height: 100vh;
 }
 
-#page-teacher-form  .page-header .header-content {
+#page-store-form  .page-header .header-content {
     margin-bottom: 6.4rem;
 }
 
-#page-teacher-form main {
+#page-store-form main {
     background: var(--color-box-base);
     width: 100%;
     max-width: 75rem;
@@ -17,16 +17,16 @@
     overflow: hidden;
 }
 
-#page-teacher-form main fieldset {
+#page-store-form main fieldset {
     border: 0;
     padding: 0 2.4rem;
 }
 
-#page-teacher-form main fieldset + fieldset{
+#page-store-form main fieldset + fieldset{
     margin-top: 6.4rem;    
 }
 
-#page-teacher-form main fieldset legend {
+#page-store-form main fieldset legend {
     font: 700 2.4rem Archivo;
     color: var(--color-text-title);
     margin-bottom: 2.4rem;
@@ -38,7 +38,7 @@
     border-bottom: 1px solid var(--color-line-in-white);
 }
 
-#page-teacher-form main fieldset legend button {
+#page-store-form main fieldset legend button {
     background: none;
     border: 0;
     color: var(--color-primary);
@@ -47,27 +47,27 @@
     transition: color 0.2s;
 }
 
-#page-teacher-form main fieldset legend button:hover {
+#page-store-form main fieldset legend button:hover {
     color: var(--color-primary-dark);
 }
 
-#page-teacher-form main form fieldset .input-block + .textarea-block,
-#page-teacher-form main form fieldset .select-block + .input-block {
+#page-store-form main form fieldset .input-block + .textarea-block,
+#page-store-form main form fieldset .select-block + .input-block {
     margin-top: 2.4rem;
 }
 
-#page-teacher-form main label {
+#page-store-form main label {
     color: var(--color-text-complement);
 }
 
-#page-teacher-form main footer {
+#page-store-form main footer {
     padding: 4rem 2.4rem;
     background: var(--color-box-footer);
     border-top: 1px solid var(--color-line-in-white);
     margin-top: 6.4rem;
 }
 
-#page-teacher-form main footer p {
+#page-store-form main footer p {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -76,11 +76,11 @@
     color: var(--color-text-complement);
 }
 
-#page-teacher-form main footer p img {
+#page-store-form main footer p img {
     margin-right: 2rem;
 }
 
-#page-teacher-form main footer button {
+#page-store-form main footer button {
     width: 100%;
     height: 5.6rem;
     background: var(--color-secundary);
@@ -97,11 +97,11 @@
     margin-top: 3.2rem;
 }
 
-#page-teacher-form main footer button:hover {
+#page-store-form main footer button:hover {
     background: var(--color-secundary-dark);
 }
 
-#page-teacher-form main form fieldset select {
+#page-store-form main form fieldset select {
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
@@ -117,40 +117,40 @@
   }
 
 @media (min-width: 700px) {
-    #page-teacher-form {
+    #page-store-form {
         max-width: 100vw;
     }
 
-    #page-teacher-form .page-header .header-content {
+    #page-store-form .page-header .header-content {
         margin-bottom: 0;
     }
 
-    #page-teacher-form main fieldset {
+    #page-store-form main fieldset {
         padding: 0 6.4rem;
     }
 
-    #page-teacher-form main fieldset .schedule-item {
+    #page-store-form main fieldset .schedule-item {
         display: grid;
         grid-template-columns: 2fr 1fr 1fr;
         column-gap: 1.6rem;
     }
 
-    #page-teacher-form main fieldset .schedule-item .input-block {
+    #page-store-form main fieldset .schedule-item .input-block {
         margin-top: 0 !important;
     }
 
-    #page-teacher-form main footer {
+    #page-store-form main footer {
         padding: 4.0rem 6.4rem;
         display: flex;
         align-items: center;
         justify-content: space-between;
     }
 
-    #page-teacher-form main footer p {
+    #page-store-form main footer p {
         justify-content: space-between;
     }
 
-    #page-teacher-form main footer button {
+    #page-store-form main footer button {
         width: 20rem;
         margin-top: 0;
     }
